network: Avoid crashing if the NMDevice doesn't have a hw-address

The property might not exist and we would g_free() an uninitialized
pointer. Using the proper API avoids all that.

https://bugzilla.gnome.org/show_bug.cgi?id=783839